pkg/lang/testdata/ub/constraints/valid/check-predicate-for-each-not-iterable.ub
constraints: [
  { kind: predicate, @for-each: input.replicas, when: true, require: false },
]
