pkg/lang/testdata/ub/constraints/invalid/for-each-empty-chain.ub
constraints: [
  {
    kind: predicate
    @for-each: [  ]
    when:    true
    require: true
  },
]
